force-app/main/default/objects/PDRI__VCS_Pull_Request_Work_Item_Tracking__c/fields/PDRI__Pull_Request__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Pull_Request__c</fullName>
    <label>Pull Request</label>
    <referenceTo>PDRI__VCS_Pull_Request__c</referenceTo>
    <relationshipLabel>VCS Pull Request Work Item Trackings</relationshipLabel>
    <relationshipName>VCS_Pull_Request_Work_Item_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>