force-app/main/default/objects/PDRI__VCS_Pull_Request_Work_Item_Tracking__c/fields/PDRI__Work_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Work_Item_Type__c</fullName>
    <label>Work Item Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>AzureBoards</fullName>
            </value>
            <value>
                <fullName>AgileAccelerator</fullName>
            </value>
            <value>
                <fullName>GithubIssues</fullName>
            </value>
            <value>
                <fullName>Asana</fullName>
            </value>
            <value>
                <fullName>ClickUp</fullName>
            </value>
            <value>
                <fullName>SalesforceWorkItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>